@@ -15,6 +15,8 @@ plugins {
 	id("io.github.ximtech.jasypt-encrypt-plugin") version "1.4.1"
 	id "com.diffplug.spotless" version "8.6.0"
 	id("tech.mappie.plugin") version "2.1.21-1.3.0"
+	id "org.sonarqube" version "7.3.1.8318"
+	id 'jacoco' // Add JaCoCo plugin
 }
 
 group = 'com.moontech'
@@ -66,7 +68,32 @@ dependencies {
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+	useJUnitPlatform({})
+	jvmArgs("--add-opens=java.base/java.time=ALL-UNNAMED", "--add-opens=java.base/java.time.zone=ALL-UNNAMED", "--enable-native-access=ALL-UNNAMED")
+	finalizedBy jacocoTestReport // Ensure JaCoCo report is generated after tests
+}
+
+jacocoTestReport {
+	reports {
+		xml.required = true // SonarQube prefers XML reports
+		html.required = true
+	}
+	// Exclude generated code or specific classes from coverage report if needed
+	afterEvaluate {
+		classDirectories.setFrom(files(classDirectories.files.collect {
+			fileTree(dir: it, exclude: [
+					"**/ArchetypeApplication.class",
+					"**/config/**",
+					"**/model/**",
+					"**/exception/**",
+					"**/commons/**",
+					"**/security/constant/**",
+					"**/security/property/**",
+					"**/domain/entity/**",
+					"**/application/mapper/**"
+			])
+		}))
+	}
 }
 
 tasks.encryptProperties {
